--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<version>1.2</version>
 		</dependency>
 	
+		<!-- Response Map -->
+		<dependency>
+			   <groupId>org.codehaus.jackson</groupId>
+			   <artifactId>jackson-mapper-asl</artifactId>
+			   <version>1.9.13</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
