로컬개발환경 설정

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>${org.apache.tomcat.jdbc.version}</version>
         </dependency>
+        <dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
         
 		<!-- AspectJ -->
 		<dependency>
