--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
 <!-- for http request parameter -->
 
-	<filter>
+<!-- 	<filter>
 		<filter-name>httpPutFormFilter</filter-name>
 		<filter-class>org.springframework.web.filter.HttpPutFormContentFilter
 		</filter-class>
@@ -44,11 +44,7 @@
 		<filter-name>httpPutFormFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<filter>
-		<filter-name>httpMethodFilter</filter-name>
-		<filter-class>com.sds.ioffice.runtime.filter.HiddenHttpMethodFilter</filter-class>
-    </filter>
+
     <filter-mapping>
 		<filter-name>httpMethodFilter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -65,5 +61,5 @@
   	<filter-mapping>
     	<filter-name>multipartFilter</filter-name>
     	<url-pattern>/*</url-pattern>
-  	</filter-mapping>
+  	</filter-mapping> -->
 </web-app>
